--- a/p/domain-vault.html
+++ b/p/domain-vault.html
@@ -1321,7 +1321,7 @@
         </div>
         <!-- Footer -->
         <footer class="main-footer">
-            <p data-translate-key="footer">Powered with 💖 by 4EverTools</p>
+            <p data-translate-key="footer">Powered by Project Freedom ✊</p>
         </footer>
     </div>
     
@@ -1556,7 +1556,7 @@
                     appearance: "Appearance",
                     themeColor: "Theme Accent Color",
                     customColor: "Custom Accent Color",
-                    footer: "Powered with 💖 by 4EverTools",
+                    footer: "Powered by Project Freedom ✊",
                     addDomain: "Add Domain",
                     editDomain: "Edit Domain",
                     otherProviderName: "Other Provider Name",
@@ -1647,7 +1647,7 @@
                     appearance: "Apariencia",
                     themeColor: "Color de Acento",
                     customColor: "Color Personalizado",
-                    footer: "Desarrollado con 💖 por 4EverTools",
+                    footer: "Desarrollado por Project Freedom ✊",
                     addDomain: "Guardar Dominio",
                     editDomain: "Editar Dominio",
                     otherProviderName: "Nombre de Otro Proveedor",
