--- a/domain-vault/index.html
+++ b/domain-vault/index.html
@@ -17,7 +17,7 @@
     </script>
     
     <!-- Your existing CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="styles.css">
     
     <!-- Lucide icons (if used) -->
     <script src="https://unpkg.com/lucide@latest"></script>
