--- a/domain-vault/index.html
+++ b/domain-vault/index.html
@@ -558,6 +558,6 @@
   
 
     <!-- Your new JavaScript file (MODULE type is important!) -->
-    <script type="module" src="js/app.js"></script>
+    <script type="module" src="app.js"></script>
 </body>
 </html>
