--- a/domain-vault/index.html
+++ b/domain-vault/index.html
@@ -24,6 +24,18 @@
     
     <!-- Chart.js (if used) -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+
+
+  <!-- Favicon -->
+    <link rel="icon" href="https://bucket.mlcdn.com/a/3336/3336910/images/524bf1f1731bc1e9a78fb265c480b6b1bf1a3e89.png">
+
+
+
+
+
+
+    
 </head>
 <body>
     <!-- Auth UI will be injected here by JavaScript -->
